<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:layout_weight="1.7"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/splash_text_3"
            android:textColor="@color/colorLightGray"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <TextView
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/splash_text_4"
            android:textColor="@color/colorLightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/splash_text_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/item_type_user"
            android:paddingBottom="16dp"
            android:drawableRight="@drawable/ic_chevron_right_white_24dp"
            android:textSize="14sp"
            android:text="@string/splash_text_6"
            android:textColor="@color/colorLightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <include layout="@layout/divider"/>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_weight="1.3"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:text="@string/splash_text_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/item_type_master"
            android:paddingBottom="16dp"
            android:drawableRight="@drawable/ic_chevron_right_white_24dp"
            android:textSize="14sp"
            android:text="@string/splash_text_8"
            android:textColor="@color/colorLightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/splash_text_9"
            android:textSize="12sp"
            android:textColor="@color/colorLightGray"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:linksClickable="true"
            android:textColorLink="@color/colorWhite"
            android:id="@+id/text_conditions"
            android:textColor="@color/colorLightGray"
            android:textSize="12sp"
            android:text="@string/text_login_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>