<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/sort_by"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/specialization"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/gender"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />
    </LinearLayout>

    <Switch
        android:textSize="18sp"
        android:id="@+id/item_visit_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/homemade" />

    <Switch
        android:textSize="18sp"
        android:id="@+id/item_visit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/the_specialist" />

    <Switch
        android:textSize="18sp"
        android:id="@+id/item_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/only_reviews" />

    <TextView
        android:paddingTop="16dp"
        android:textSize="18sp"
        android:text="@string/cost_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <SeekBar
        android:id="@+id/price_progtess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="0"
            android:layout_weight="1"
            android:textColor="@color/colorBlack"
            android:id="@+id/item_current_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/colorBlack"
            android:id="@+id/item_max_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="16dp"
            android:textSize="18sp"
            android:text="@string/search_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <SeekBar
            android:id="@+id/radius_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />
        <LinearLayout
            android:paddingTop="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="0"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:id="@+id/item_current_radius"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="50"
                android:textColor="@color/colorBlack"
                android:id="@+id/item_max_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
    </android.support.v4.widget.NestedScrollView>