<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <fragment
                android:tag="edit_profile"
                android:name="com.umka.umka.fragments.profile.FragmentAvatar"
                android:id="@+id/fragment_avatar_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/item_first_name"
                    android:id="@+id/item_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/item_last_name"
                    android:id="@+id/item_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/item_about"
                    android:id="@+id/item_about"
                    android:maxLines="5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:layout_marginTop="16dp"
                android:id="@+id/item_gender"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/check_left"
                    android:checked="true"
                    android:text="Мужской"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/check_right"
                    android:text="Женский"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/item_email"
                    android:id="@+id/item_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>